# hpcgame2024

conway/: a.out  baseline  conway.cu  dbg  gen
conway/handout/: Makefile  generate.cpp
conway/handout/visualizer/: CMakeLists.txt
conway/handout/visualizer/include/: generator.hpp  world.hpp
conway/handout/visualizer/src/: CMakeLists.txt
conway/handout/visualizer/src/generator/: CMakeLists.txt  generator.cpp  generator.cu
conway/handout/visualizer/src/runner/: CMakeLists.txt  runner.cpp
conway/handout/visualizer/src/visualizer/: CMakeLists.txt  scene.cpp  scene.hpp  visualizer.cpp
conway/handout/visualizer/src/world/: CMakeLists.txt  world.cpp
gemm/: baseline  baseline.cc  gemm  generate  generate.cc  main.cc  report1.nsys-rep  report2.nsys-rep  report3.nsys-rep  report4.nsys-rep  report5.nsys-rep  report6.nsys-rep  tmp.cpp  validate  validate.cc
h66/: base  base.cpp  check.ipynb
h66/handout/: base.cpp  check.ipynb  out.data  sp_12.data  sp_14.data
light/: baseline.out  prog  radiosity_base.cpp
logistic/: .gitignore  a.out  baseline.cc  main.cc
make/: CMakeLists.txt  makefile
ray/: gen.py  main.py  start-head.sbatch  start-job.sbatch  start-job.sh  start-slave.sbatch
ray/inputs/: input_0.npy  input_1.npy  input_10.npy  input_11.npy  input_12.npy  input_13.npy  input_14.npy  input_15.npy  input_16.npy  input_17.npy  input_18.npy  input_19.npy  input_2.npy  input_20.npy  input_21.npy  input_22.npy  input_23.npy  input_24.npy  input_25.npy  input_26.npy  input_27.npy  (+79 more)
shasum/: ans.cpp  baseline.cpp  gen  generate.cpp
sim/: a.out  sim.out
(+1556 files in other folders)
